--- a/src/style.css
+++ b/src/style.css
@@ -97,6 +97,7 @@ h3 {
 
 .movies:hover .movieText{
   visibility: visible;
+  cursor:pointer;
 }
 
 .movieText {
@@ -127,3 +128,162 @@ h3 {
   font-size: 1.2rem;
   color: white;
 }
+
+.container{
+    display: block;
+    justify-content: right;
+    height: 100%;
+}
+
+.img_content, .irc_mi{
+    display: block;
+    max-width: 100%;
+    margin: auto;
+    height: auto;
+    width: 25rem;
+    margin-top: 4rem;
+}
+.yes, .no{
+    background: red;
+    width: 5rem;
+    -webkit-border-radius: 1.75rem;
+    -moz-border-radius: 1.75rem;
+    border-radius: 1.75rem;
+    text-shadow: 0.18rem 0.10rem 0.18rem #000000;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ffffff;
+    font-size: 1.77rem;
+    padding: 1.15rem ;
+    text-decoration: none;
+    background-image: -webkit-linear-gradient(top, red, #720404);
+    background-image: -moz-linear-gradient(top,  red, #720404);
+    background-image: -ms-linear-gradient(top,  red, #720404);
+    background-image: -o-linear-gradient(top,  red, #720404);
+    background-image: linear-gradient(to bottom,  red, #720404);
+    margin-left: 24rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    align-items: center;
+
+}
+
+.yes:hover, .no:hover{
+    background: #022236;
+    background-image: -webkit-linear-gradient(top, #022236, #3a7bf5);
+    background-image: -moz-linear-gradient(top, #022236, #3a7bf5);
+    background-image: -ms-linear-gradient(top, #022236, #3a7bf5);
+    background-image: -o-linear-gradient(top, #022236, #3a7bf5);
+    background-image: linear-gradient(to bottom, #022236, #3a7bf5);
+    text-decoration: none;
+}
+.quest{
+    color: white;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.background_marvel{
+    float:right;
+    max-width: 50%;
+}
+.irc_mi{
+    max-width: 28rem;
+    height: 15rem;
+}
+.info_content{
+    color: white;
+    font-size: 1.5rem;
+    text-align: justify;
+    margin: 2rem;
+}
+
+#slideshow {
+    -ms-flex-item-align: center;
+    align-self: center;
+    margin: 0px auto;
+    border: 10px solid #B2DFDB;
+    padding: 0;
+    border-radius: 0.6rem;
+    position: relative;
+    background-color: #f8f2dc;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column wrap;
+    flex-flow: column wrap;
+    max-width: 28rem;
+    height: auto;
+    -webkit-box-shadow: 0 2px 2px rgb(87, 124, 123);
+    box-shadow: 0 2px 2px rgb(87, 124, 123);
+    overflow: hidden;
+
+   }
+
+   #prev,
+   #next {
+    cursor: pointer;
+    width: 10px;
+    z-index: 9999;
+    color: black;
+    position: absolute;
+    margin-top: -60px;
+    top: 50%;
+    font-size: 30px;
+    padding: 10px;
+    background-color: #f8f2dc;
+    font-weight: bold;
+   }
+
+   #prev {
+    border-radius: 0 60px 60px 0;
+    left: -5px;
+   }
+
+   #next {
+    border-radius: 60px 0 0 60px;
+    right: -5px;
+   }
+
+   .caption {
+    text-align: center;
+    text-transform: uppercase;
+    padding: 10px;
+    display: none;
+    width: 100%;
+   }
+
+   /*-----Main------*/
+   p,
+   span {
+    font-size: 1.2em;
+   }
+   .container_video{
+    background-color:black;
+    width:750px;
+    padding: 0.70rem 1.25rem;
+    margin: 10% auto;
+    position: relative;
+    display: block;
+    border-width: 15px;
+    border-color: whitesmoke;
+   }
+   .modal_container{
+    background-color: rgba(0,0,0,.8);
+    position:fixed;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    opacity:0;
+    pointer-events:none;
+    transition: all 1s;
+   }
+   #modal_video:target{
+    opacity:1;
+    pointer-events:auto;
+   }
+   .color_button{
+       color: white;
+   }
